Fix not showing new lines in Task details

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,10 @@ body {
   font-family: sans-serif;
 }
 
+p {
+  white-space: pre;
+}
+
 .form-control label,
 .form-control input,
 .form-control textarea {
